--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express-device": "^0.4.2",
     "express-validator": "^6.14.2",
